--- a/k8S/frontend/frontend_deployment.yaml
+++ b/k8S/frontend/frontend_deployment.yaml
@@ -19,6 +19,8 @@ spec:
         # optional (nice to have)
         editor: vscode
     spec:
+      # give pod 30 seconds to shit down after kube sends SIGTERM signal
+      terminationGracePeriodSeconds: 30
       # Where will I tolerate my pods to run 
       # These do not restrict the pod from running on nodes that do not have the provided taint
       tolerations:
@@ -37,12 +39,14 @@ spec:
               matchLabels:
                 app: frontend-webapp
             topologyKey: kubernetes.io/hostname
-
       containers:
       # can be multiple containers since one pod scan contain multiple containers
       - name: frontend-webapp
         # test image from docker registry, provided by nginx project
-        image: nginxdemos/hello
+        image: acrdev9atwih.azurecr.io/weatherforecast-frontend:latest
+        ports:
+        - containerPort: 80
+        imagePullPolicy: Always # Always pull latest version
         resources:
           requests:
             # node should have 128 megabytes available for pod to run into it
@@ -57,3 +61,16 @@ spec:
             memory: "1Gi"
             #1 core maimum allocated to each pod
             cpu: "1"
+        #defining readiness and liveness probes
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 10
