--- a/k8S/backend/backend_deployment.yaml
+++ b/k8S/backend/backend_deployment.yaml
@@ -7,6 +7,11 @@ spec:
     matchLabels:
       app: backend-webapp
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
   # pod definition section
   template:
     # metadata around the pod
