core: adding auto scaling definitions core: migrate pod anti affinity from required to preferred to enable scaling

--- a/k8S/backend/backend_deployment.yaml
+++ b/k8S/backend/backend_deployment.yaml
@@ -36,11 +36,13 @@ spec:
         kubernetes.azure.com/mode: user
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchLabels:
-                app: backend-webapp
-            topologyKey: kubernetes.io/hostname
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: backend-webapp
+              topologyKey: kubernetes.io/hostname
       containers:
       # can be multiple containers since one pod scan contain multiple containers
       - name: backend-webapp
