--- a/k8S/frontend/frontend_deployment.yaml
+++ b/k8S/frontend/frontend_deployment.yaml
@@ -53,11 +53,13 @@ spec:
         kubernetes.azure.com/mode: user
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchLabels:
-                app: frontend-webapp
-            topologyKey: kubernetes.io/hostname
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: frontend-webapp
+              topologyKey: kubernetes.io/hostname
       containers:
       # can be multiple containers since one pod scan contain multiple containers
       - name: frontend-webapp
