--- a/k8S/backend/backend_deployment.yaml
+++ b/k8S/backend/backend_deployment.yaml
@@ -47,7 +47,7 @@ spec:
       # can be multiple containers since one pod scan contain multiple containers
       - name: backend-webapp
         # test image from docker registry, provided by nginx project
-        image: acrdev9atwih.azurecr.io/weatherforecast-backend:latest
+        image: aacrdevzlj7yj.azurecr.io/weatherforecast-backend:latest
         ports: 
         - containerPort: 80
         imagePullPolicy: Always  # Always pull latest
