--- a/k8S/frontend/config/frontend_config-map.yaml
+++ b/k8S/frontend/config/frontend_config-map.yaml
@@ -7,4 +7,4 @@ metadata:
 data:
   appSettings.yaml: |
     # yaml file
-    backend_url: http://api.weatherly
+    backend_url: http://api.weatherly.local:8080
