--- a/k8S/frontend/frontend_deployment.yaml
+++ b/k8S/frontend/frontend_deployment.yaml
@@ -46,7 +46,7 @@ spec:
       - key: workload
         operator: 'Equal'
         value: 'frontend'
-        effect: 'NoExecute'
+        effect: 'NoSchedule'
       # Where will my pods will run, and in what node label
       # We should add a toleration because the user nodes are tainted and will be not schedule the pods if the taint is not provided
       nodeSelector:
