--- a/k8S/backend/gateway-api/backend_gateway-api.yaml
+++ b/k8S/backend/gateway-api/backend_gateway-api.yaml
@@ -2,10 +2,13 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: backend-gateway
+  namespace: nginx-gateway
 spec:
-  gatewayClassName: nginx-gateway-class
+  gatewayClassName: nginx
   listeners:
     - name: http
       protocol: HTTP
       port: 8080
-      host: api.weatherly
+      allowedRoutes:
+        namespaces:
+          from: All
