--- a/k8S/backend/gateway-api/backend_httproute.yaml
+++ b/k8S/backend/gateway-api/backend_httproute.yaml
@@ -2,13 +2,15 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: backend-httproute
+  namespace: nginx-gateway
 spec:
   parentRefs:
     - name: backend-gateway
       # maps to listener named http in backend-gateway (useful for gateways with multiple listeners)
       sectionName: http
   hostnames:
-    - api.weatherly
+    #maps to one or many of the host names that are defined on the gateway level
+    - api.weatherly.local
   rules:
     - matches:
         - path:
@@ -17,3 +19,4 @@ spec:
       backendRefs:
         - name: backend-service
           port: 8080
+          namespace: default
