--- a/k8S/backend/gateway-api/backend_service.yaml
+++ b/k8S/backend/gateway-api/backend_service.yaml
@@ -2,9 +2,10 @@ kind: Service
 apiVersion: v1
 metadata:
   name: backend-service
+  namespace: default
 spec:
   selector:
     app: backend-webapp
   ports:
   - port: 8080
-    targetPort: 8080
+    targetPort: 80
