--- a/k8S/frontend/gateway-api/frontend_gateway-api.yaml
+++ b/k8S/frontend/gateway-api/frontend_gateway-api.yaml
@@ -2,10 +2,13 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: frontend-gateway
+  namespace: nginx-gateway
 spec:
-  gatewayClassName: nginx-gateway-class
+  gatewayClassName: nginx
   listeners:
     - name: http
       protocol: HTTP
       port: 80
-      host: front.weatherly
+      allowedRoutes:
+        namespaces:
+          from: All
