--- a/k8S/frontend/gateway-api/frontend_httproute.yaml
+++ b/k8S/frontend/gateway-api/frontend_httproute.yaml
@@ -2,13 +2,14 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: frontend-httproute
+  namespace: nginx-gateway
 spec:
   parentRefs:
-    - name: backend-gateway
+    - name: frontend-gateway
       # maps to listener named http in backend-gateway (useful for gateways with multiple listeners)
       sectionName: http
   hostnames:
-    - front.weatherly
+    - front.weatherly.local
   rules:
     - matches:
         - path:
@@ -16,4 +17,5 @@ spec:
             value: /
       backendRefs:
         - name: frontend-service
-          port: 8080
+          port: 80
+          namespace: default
