--- a/k8S/gitops/gitops_argocd-application.yaml
+++ b/k8S/gitops/gitops_argocd-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/medbalighhamdi/Trainings.Kubernetes
+    repoURL: https://github.com/medbalighhamdi/Trainings.Kubernetes.git
     targetRevision: HEAD
     path: k8S
   destination: 
