--- a/k8s/gitops/gitops_argocd-application.yaml
+++ b/k8s/gitops/gitops_argocd-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: weatherly-app
+  name: dev-weatherly-app
   namespace: argocd
 spec:
   project: default
