core: adding redis stateful set definition

--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../manifests/backend
   - ../../manifests/frontend
   - ../../manifests/shared
+  - ../../manifests/database
 
 namePrefix: dev-
 nameSuffix: ""
