fix: adding fixes for correctly hosting front and back components

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -20,4 +20,4 @@ COPY --from=build /app .
 EXPOSE 80
 ENV ASPNETCORE_URLS=http://+:80
 
-ENTRYPOINT ["dotnet", "WeatherForecast.Api.dll"0
+ENTRYPOINT ["dotnet", "WeatherForecast.Api.dll"]
