--- a/.github/workflows/docker-ci.template.yml
+++ b/.github/workflows/docker-ci.template.yml
@@ -29,7 +29,7 @@ jobs:
              id: gitversion
              uses: gittools/actions/gitversion/execute@v0.10.2
              with:
-               configFile: ${{ inputs.gitversion_config_path }}
+               configFilePath: ${{ inputs.gitversion_config_path }}
 
            - name: Get short SHA
              id: sha
