fix: passing secrets to resuable workflow

--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -20,3 +20,7 @@ jobs:
             service_name: weather-forecast-frontend
             service_path: src/weather-forecast-frontend
             gitversion_config_path: src/weather-forecast-frontend/GitVersion.yml
+        secrets:
+            ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
+            ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
+            ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
