--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -15,9 +15,13 @@ on:
           - main
 
 jobs:
-  backend-dockerBuildAndPush:
-    uses: ./.github/workflows/docker-ci.template.yml
-    with:
-      service_name: weather-forecast-api
-      service_path: src/weather-forecast-api
-      gitversion_config_path: src/weather-forecast-api/GitVersion.yml
+    backend-dockerBuildAndPush:
+        uses: ./.github/workflows/docker-ci.template.yml
+        with:
+            service_name: weather-forecast-api
+            service_path: src/weather-forecast-api
+            gitversion_config_path: src/weather-forecast-api/GitVersion.yml
+        secrets:
+            ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
+            ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
+            ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
