--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -1,5 +1,4 @@
-name: Build & Push Frontend Image to ACR
-
+name: Build & Push Weather Forecast Frontend
 on:
     push:
         paths:
@@ -9,7 +8,7 @@ on:
           - "src/weather-forecast-frontend/**"
 
 jobs:
-    frontend-dockerBuildAndPush:
+    Frontend-BuildAndPush:
         uses: ./.github/workflows/ci-template.yml
         with:
             service_name: weather-forecast-frontend
