--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -8,6 +8,7 @@ on:
     pull_request:
         paths:
           - "src/weather-forecast-api/**"
+    workflow_dispatch:
 
 jobs:
     Backend-buildAndPush:
