--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -6,6 +6,7 @@ on:
     pull_request:
         paths:
           - "src/weather-forecast-frontend/**"
+    workflow_dispatch:
 
 jobs:
     Frontend-BuildAndPush:
