--- a/.github/workflows/pull-requests-auto-assign.yml
+++ b/.github/workflows/pull-requests-auto-assign.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  assign:
+  Assign-Reviewers:
     runs-on: ubuntu-latest
     permissions:
         pull-requests: write
