--- a/.github/workflows/pull-requests-auto-assign.yml
+++ b/.github/workflows/pull-requests-auto-assign.yml
@@ -2,7 +2,7 @@ name: Auto Assign Teams
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, reopened, synchronize]
 
 permissions:
     pull-requests: write
