--- a/.github/workflows/pull-requests-auto-assign.yml
+++ b/.github/workflows/pull-requests-auto-assign.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Assign teams
         uses: actions/github-script@v7
         with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const files = await github.paginate(
               github.rest.pulls.listFiles, {
@@ -69,7 +70,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number,
-              team_reviewers: teams
+              team_reviewers: ["devops-team"]
             });
             
             console.log("✅ Team assignment completed successfully.");
