fix: correct code source path

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,13 +6,13 @@ on:
           - main
           - develop
         paths:
-          - .src/weatehr-forecast-api/**
+          - src/weather-forecast-api/**
     pull_request:
         branches:
           - main
           - develop
         paths:
-          - .src/weatehr-forecast-api/**
+          - src/weather-forecast-api/**
 
 jobs:
     codeQLAnalysis-backend:
