--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -2,7 +2,10 @@ name: CI - Build & Push Weather Forecast Backend
 
 on:
     push:
-        branches: [ "main" ]
+        branches:
+            - main
+            - develop
+            - 'release/**'
         paths:
           - src/weather-forecast-api/**
     pull_request:
