--- a/.github/workflows/frontend-build-check.yml
+++ b/.github/workflows/frontend-build-check.yml
@@ -1,21 +1,24 @@
-name: Status Check - Pull Request Build Check
+name: Status Check - Frontend Pull Request Build Check
 
 on:
-  pull_request:
-    branches:
-      - main
-      - develop
-      - 'release/**'
-  workflow_dispatch:  # allows manual testing
+    pull_request:
+      branches:
+          - main
+          - develop
+          - 'release/**'
+      paths:
+        - src/weather-forecast-frontend/**
+    workflow_dispatch:  # allows manual testing
 
 jobs:
-  check-build:
+  frontend-buildCheck:
     name: PR Build Check
     uses: ./.github/workflows/ci-template.yml
     with:
       service_name: weather-forecast-frontend
       service_path: src/weather-forecast-frontend
       gitversion_config_path: src/weather-forecast-frontend/GitVersion.yml
+      #status check doesn't push into ACR
       push_to_registry: false
     secrets:
       ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
