--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -14,6 +14,8 @@ on:
     workflow_dispatch:
 
 jobs:
+    
+    # Try to package docker image
     Backend-buildAndPush:
         uses: ./.github/workflows/ci-template.yml
         with:
@@ -24,4 +26,30 @@ jobs:
             ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
             ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
             ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+
+    # Run unit tests
+    run-UnitTests:
+        runs-on: ubuntu-latest
+        steps:
+              - name: Restore Backend dependencies
+                working-directory: src/weather-forecast-api/Tests
+                run: | 
+                    dotnet restore
+          
+              - name: Run unit tests
+                working-directory: src/weather-forecast-api/Tests
+                run: |
+                 dotnet test \
+                    --configuration Release \
+                    --logger "trx;LogFileName=backend-tests.trx" \
+                    --collect:"XPlat Code Coverage" \
+                    /p:CollectCoverage=true \
+                    /p:CoverletOutputFormat=cobertura \
+                    /p:CoverletOutput=TestResults/Coverage/
+
+              - name: Upload backend test results
+                uses: actions/upload-artifact@v4
+                with:
+                    name: backend-test-results
+                    path: src/weather-forecast-api/TestResults
             
