[UnitTests] Adding workflows and unit test project
* core: adding first unit tests

* core: adding unit test calculation as a new workflow job in status check

* fix: specify full test project name ?

* fix: clone repo before running tests

* fix: apply check to correct workflow

* core: assign name to job for status check validity

* core: more meaningful name

* fix: correct path

--- a/.github/workflows/backend-build-check.yml
+++ b/.github/workflows/backend-build-check.yml
@@ -7,7 +7,7 @@ on:
           - main
           - 'release/**'
         paths:
-          - src/weather-forecast-frontend/**
+          - src/weather-forecast-backend/**
     workflow_dispatch:  # allows manual testing
 
 jobs:
@@ -24,4 +24,35 @@ jobs:
         ACR_PASSWORD : ${{ secrets.ACR_PASSWORD }}
         ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
 
+    # Run unit tests
+  run-UnitTests:
+      runs-on: ubuntu-latest
+      name: Backend Status Check - Run Unit Tests
+      steps:
+        - name: Checkout repo
+          uses: actions/checkout@v4
+          with:
+          # shallow copy
+            fetch-depth: 1
+
+        - name: Restore Backend dependencies
+          run: |
+            dotnet restore src/weather-forecast-api/Tests/WeatherForecast.Tests.csproj
+          
+        - name: Run unit tests
+          working-directory: src/weather-forecast-api/Tests
+          run: |
+                 dotnet test \
+                    --configuration Release \
+                    --logger "trx;LogFileName=backend-tests.trx" \
+                    --collect:"XPlat Code Coverage" \
+                    /p:CollectCoverage=true \
+                    /p:CoverletOutputFormat=cobertura \
+                    /p:CoverletOutput=TestResults/Coverage/
+
+        - name: Upload backend test results
+          uses: actions/upload-artifact@v4
+          with:
+            name: backend-test-results
+            path: src/weather-forecast-api/TestResults
     
