--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -8,12 +8,11 @@ on:
             - 'release/**'
         paths:
           - src/weather-forecast-api/**
-    pull_request:
-        paths:
-          - src/weather-forecast-api/**
     workflow_dispatch:
 
 jobs:
+
+    # Try to package docker image
     Backend-buildAndPush:
         uses: ./.github/workflows/ci-template.yml
         with:
