--- a/.github/workflows/pull-requests_wf-codeql-analysis.yml
+++ b/.github/workflows/pull-requests_wf-codeql-analysis.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
     codeQLAnalysis-backend:
-        name: CodeQL Weather Forecast Analysis
+        name: Weather Forecast - CodeQL Analysis
         runs-on: ubuntu-latest
         permissions:
             actions: read
