core: correct appsettings.json file content to match weather forecast api format

--- a/k8s/manifests/backend/config/backend_config-map.yaml
+++ b/k8s/manifests/backend/config/backend_config-map.yaml
@@ -12,10 +12,9 @@ data:
       }
     },
     "AllowedHosts": "*"
-    {
-      "Redis":
-      {
-        "Write": "redis-primary.default.svc.cluster.local:6379"
-        "Read": "redis-secondary.default.svc.cluster.local:6379"
-      } 
+    "WeatherForecast":{
+      "Redis": {
+          "WriteDbConnection": "redis-primary.default.svc.cluster.local:6379"
+          "ReadDbConnection": "redis-secondary.default.svc.cluster.local:6379"
+        }
     }
