--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../manifests/frontend
   - ../../manifests/shared
   - ../../manifests/database
+  - backend_config-map.yml
 
 namePrefix: dev-
 nameSuffix: ""
