fix: dirty fix for service name

--- a/k8s/manifests/backend/backend_deployment.yaml
+++ b/k8s/manifests/backend/backend_deployment.yaml
@@ -55,7 +55,7 @@ spec:
         command:
           - /app/wait-for.sh
         args:
-          - redis-secondary.default.svc.cluster.local
+          - dev-redis-secondary.default.svc.cluster.local
           - "6379"
           - dotnet
           - WeatherForecast.Api.dll
