--- a/k8s/manifests/backend/backend_deployment.yaml
+++ b/k8s/manifests/backend/backend_deployment.yaml
@@ -47,7 +47,7 @@ spec:
       # can be multiple containers since one pod scan contain multiple containers
       - name: backend-webapp
         # test image from docker registry, provided by nginx project
-        image: acrdevzlj7yj.azurecr.io/weather-forecast-api:latest
+        image: acrdevzlj7yj.azurecr.io/weather-forecast-api:0.1.0-7b109e4
         # mounting config file
         volumeMounts:
           - name: config
