--- a/k8s/manifests/frontend/frontend_deployment.yaml
+++ b/k8s/manifests/frontend/frontend_deployment.yaml
@@ -64,7 +64,7 @@ spec:
       # can be multiple containers since one pod scan contain multiple containers
       - name: frontend-webapp
         # test image from docker registry, provided by nginx project
-        image: acrdevzlj7yj.azurecr.io/weather-forecast-frontend:latest
+        image: acrdevzlj7yj.azurecr.io/weather-forecast-frontend:0.1.0-7b109e4
         ports:
         - containerPort: 80
         imagePullPolicy: Always # Always pull latest version
