fix: point http route to cirrect gateway dev resource

--- a/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
+++ b/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: nginx-gateway
 spec:
   parentRefs:
-    - name: frontend-gateway
+    - name: dev-frontend-gateway
       # maps to listener named http in backend-gateway (useful for gateways with multiple listeners)
       sectionName: http
   hostnames:
