--- a/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
+++ b/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
@@ -16,6 +16,6 @@ spec:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: frontend-service
+        - name: dev-frontend-service
           port: 80
           namespace: default
