--- a/k8s/manifests/frontend/gateway-api/frontend_service.yaml
+++ b/k8s/manifests/frontend/gateway-api/frontend_service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   selector:
-    app: frontend-webapp
+    app: dev-frontend-webapp
   ports:
   - port: 80
     targetPort: 80
