core: move kustomizeconfig file into manifests folder as per repo setup recos

--- a/k8s/manifests/backend/kustomization.yaml
+++ b/k8s/manifests/backend/kustomization.yaml
@@ -12,3 +12,6 @@ resources:
   - gateway-api/backend_httproute.yaml
   - gateway-api/backend_reference-grant.yaml
   - gateway-api/backend_service.yaml
+
+configurations:
+  - kustomizeconfig.yaml
