--- a/k8s/manifests/frontend/kustomizeconfig.yaml
+++ b/k8s/manifests/frontend/kustomizeconfig.yaml
@@ -11,7 +11,7 @@ nameReference:
     version: v1
     group: ""
     fieldSpecs:
-      - kind: Gateway
+      - kind: HTTPRoute
         version: v1
         group: gateway.networking.k8s.io
         path: spec/rules/backendRefs/name
