fix: fix redis primary pod name

--- a/k8s/manifests/database/redis/redis_write-service.yaml
+++ b/k8s/manifests/database/redis/redis_write-service.yaml
@@ -8,5 +8,5 @@ spec:
   - port: 6379
   selector:
     # writes are directed to redis-0 pod
-    statefulset.kubernetes.io/pod-name: redis-0
+    statefulset.kubernetes.io/pod-name: dev-redis-0
   type: ClusterIP
