core: add dev metadata label core: configure a map generator and add REDIS_HEADLESS_SERVICE env varibale

--- a/k8s/manifests/database/redis/redis_stateful-set.yaml
+++ b/k8s/manifests/database/redis/redis_stateful-set.yaml
@@ -27,19 +27,34 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: ENV_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['environment']
+        envFrom:
+          - configMapRef:
+              name: redisConfigEnvs
         command:
           - /bin/sh
           - -c
           - |
-           if [ "$POD_NAME" = "dev-redis-0" ]; then
-              exec redis-server --appendonly no
-            else
-              echo "Waiting for master DNS..."
-              until redis-cli -h dev-redis-0.dev-redis -p 6379 PING; do
-                sleep 2
-              done
-              exec redis-server --appendonly yes --replicaof dev-redis-0.dev-redis 6379
-            fi
+           set -e
+           # Derive StatefulSet base name (remove -<ordinal>)
+           BASE_NAME="${POD_NAME%-*}"
+           MASTER_POD="${BASE_NAME}-0"
+           MASTER_HOST="${MASTER_POD}.${REDIS_HEADLESS_SERVICE}"
+
+           if [ "$POD_NAME" = "$MASTER_POD" ]; then
+             echo "Starting Redis master: $POD_NAME"
+             exec redis-server --appendonly no
+           else
+             echo "Waiting for Redis master at $MASTER_HOST..."
+             until redis-cli -h "$MASTER_HOST" -p 6379 PING; do
+               sleep 2
+             done
+             echo "Starting Redis replica: $POD_NAME"
+             exec redis-server --appendonly yes --replicaof "$MASTER_HOST" 6379
+           fi:
   volumeClaimTemplates:
   - metadata:
       name: redis-data
