--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -11,9 +11,9 @@ resources:
 namePrefix: dev-
 nameSuffix: ""
 
-# # # adds a metadata.label for every resource created by this kustomize hop
-# commonLabels:
-#   environment: dev
+# adds a metadata.label for every resource created by this kustomize hop
+commonLabels:
+  environment: dev
 
 # we need to track the environment in order to use it on pod level
 # config map generators are used here in order to update the pods as the config changes
