--- a/k8s/manifests/database/redis/redis_stateful-set.yaml
+++ b/k8s/manifests/database/redis/redis_stateful-set.yaml
@@ -29,7 +29,7 @@ spec:
               fieldPath: metadata.name
         envFrom:
           - configMapRef:
-              name: redisconfigenvs
+              name: redisconfigenvvars
         command:
           - /bin/sh
           - -c
