core: migrate patches to point to real services namespaces

--- a/k8s/overlays/dev/patches/patch-backend-httproute.yaml
+++ b/k8s/overlays/dev/patches/patch-backend-httproute.yaml
@@ -9,4 +9,4 @@ spec:
         # Both Vars (which are standard kubernetes primitives) and kustomizeconfig file based replacement
         - name: dev-backend-service   # prefixed Service name for dev overlay
           port: 8080
-          namespace: default
+          namespace: backend
