--- a/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
+++ b/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
@@ -18,4 +18,4 @@ spec:
       backendRefs:
         - name: frontend-service
           port: 80
-          namespace: default
+          namespace: frotend
