fix: add new reference grant to frontend kustomization file

--- a/k8s/manifests/frontend/kustomization.yaml
+++ b/k8s/manifests/frontend/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - gateway-api/frontend_gateway-api.yaml
   - gateway-api/frontend_httproute.yaml
   - gateway-api/frontend_service.yaml
+  - gateway-api/frontend_reference-grant.yaml
   - config/frontend_config-map.yaml
 
 configurations:
