core: add cluster init script core: introduce dedicated values.yaml files

--- a/k8s/gitops/addons/istio/application.yaml
+++ b/k8s/gitops/addons/istio/application.yaml
@@ -12,102 +12,8 @@ spec:
     chart: istiod
     targetRevision: 1.22.0
     helm:
-      values: |
-        pilot:
-          nodeSelector:
-            workload: operations
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "operations"
-              effect: "NoSchedule"
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: workload
-                        operator: In
-                        values:
-                          - operations
-          resources:
-            requests:
-              cpu: 250m
-              memory: 512Mi
-            limits:
-              cpu: 1000m
-              memory: 1Gi
-        sidecarInjectorWebhook:
-          nodeSelector:
-            workload: operations
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "operations"
-              effect: "NoSchedule"
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: workload
-                        operator: In
-                        values:
-                          - operations
-        validationWebhook:
-          nodeSelector:
-            workload: operations
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "operations"
-              effect: "NoSchedule"
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: workload
-                        operator: In
-                        values:
-                          - operations
-        ingressGateway:
-          enabled: true
-          nodeSelector:
-            workload: operations
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "operations"
-              effect: "NoSchedule"
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: workload
-                        operator: In
-                        values:
-                          - operations
-        egressGateway:
-          enabled: true
-          nodeSelector:
-            workload: operations
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "operations"
-              effect: "NoSchedule"
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: workload
-                        operator: In
-                        values:
-                          - operations
-
+      valueFiles: 
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-system
