--- a/k8s/gitops/addons/prometheus/application.yaml
+++ b/k8s/gitops/addons/prometheus/application.yaml
@@ -12,28 +12,9 @@ spec:
     chart: kube-prometheus-stack
     targetRevision: 58.5.0
     helm:
-      values: |
-        prometheus:
-          prometheusSpec:
-            nodeSelector:
-              workload: operations
-            tolerations:
-              - key: "workload"
-                operator: "Equal"
-                value: "operations"
-                effect: "NoSchedule"
-
-        alertmanager:
-          nodeSelector:
-            workload: operations
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "operations"
-              effect: "NoSchedule"
-
-        grafana:
-          enabled: false
+      skipCrds: true
+      valueFiles: 
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
