--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -12,14 +12,8 @@ spec:
     chart: grafana
     targetRevision: 7.3.9
     helm:
-      values: |
-        nodeSelector:
-          workload: operations
-        tolerations:
-          - key: "workload"
-            operator: "Equal"
-            value: "operations"
-            effect: "NoSchedule"
+      valueFiles: 
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
