core: remove alert manager

--- a/k8s/gitops/addons/prometheus/values.yaml
+++ b/k8s/gitops/addons/prometheus/values.yaml
@@ -9,14 +9,7 @@ prometheus:
         effect: NoSchedule
 
 alertmanager:
-  enabled: true
-  nodeSelector:
-    workload: operations
-  tolerations:
-    - key: workload
-      operator: Equal
-      value: operations
-      effect: NoSchedule
+  enabled: false
 
 grafana:
   enabled: false
