core: migrate kiali to monitoring namespace for easy prometheus integration core: rename prometheus to prometheus-server to distinguish crds job

--- a/k8s/gitops/addons/kiali/application.yaml
+++ b/k8s/gitops/addons/kiali/application.yaml
@@ -16,7 +16,7 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: kiali
+    namespace: monitoring
   syncPolicy:
     automated:
       prune: true
